--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,18 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Change or remove this page</h1>
-        <h1> testing testing</h1>
+        
+        <div>
+
+        <input type="number" id="movieID">
+        <button id="submit">Get Movie</button>
+
+        <pre id="movies">
+            
+        </pre>
+
+    </div>
+
+        <script src ="movie.js"></script>
     </body>
 </html>
